[package]
name = "podcastrs"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

[dependencies]
reqwest = "0.9.19"
sha2 = "0.8.0"
tempfile = "3.1.0"
mongodb = "0.3.12"
serde = { version = "1.0", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rss]
version = "1.8"
