[package]
name = "common"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
sha2 = "0.8.0"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
util = { path = "../util" }
serde_json = "1.0.40"

[dependencies.rss]
version = "1.8"
features = [
	"serde"
]
