[package]
name = "podcast-cli"
version = "0.1.0"
authors = ["DenysPolitiuk <denys.politiuk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
scheduler-trait = { path = "../scheduler-trait" }
clap = "2.33.0"
serde_json = "1.0.40"
