[package]
name = "podrocket"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }
storage = { path = "../storage" }
podrocket-trait = { path = "../podrocket-trait" }
common = { path = "../common" }
rocket_contrib = "0.4.2"
