[package]
name = "scheduler"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
scheduler-trait = { path = "../scheduler-trait" }
tempfile = "3.1.0"
