[package]
name = "storage"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mongodb = "0.3.12"
serde_json = "1.0.40"
common = { path = "../common" }
scheduler-trait = { path = "../scheduler-trait" }
